# aperio

./: .gitignore  LICENSE  NOTICE  README.md  aperio.py  install.bat  uninstall.bat
.github/workflows/: release.yml
daemon/: Cargo.toml  build.rs
daemon/src/: main.rs
installer/: aperio.iss
research/: README.md  diag.py
research/EMEET Pixy/: 00_README.txt  REpixy.md  cmd_headers.txt  emeetlink_strings.txt  studio_symbols.txt  usb_descriptors.txt
winget/: Wawtor.Aperio.installer.yaml
